--- a/src/components/Metronome.css
+++ b/src/components/Metronome.css
@@ -168,3 +168,44 @@ label {
 .play-button.stop:hover {
   background: #ef4444;
 }
+
+.volume-section {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.volume-slider {
+  width: 100%;
+  height: 4px;
+  -webkit-appearance: none;
+  appearance: none;
+  background: #ddd;
+  border-radius: 2px;
+  outline: none;
+}
+
+.volume-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: #333;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.volume-slider::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background: #333;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+}
+
+.volume-value {
+  text-align: center;
+  font-size: 0.875rem;
+  color: #666;
+}
